--- a/app.json
+++ b/app.json
@@ -26,7 +26,7 @@
       "supportsTablet": true
     },
     "android": {
-      "package": "com.luanfv.luanfv",
+      "package": "com.luanfv.cepconsult",
       "versionCode": 1
     }
   }
